--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,8 +8,8 @@
   <title>{%- if page.title -%} {{ page.title }} | {% endif -%} {{ site.title }}</title>
   {%- seo title=false -%}
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito&display=swap"> 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.min.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito&display=swap">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
   {%- if page.css -%}
     <link rel="stylesheet" href="{{ '/assets/css/' | append: page.css | append: '.css' | relative_url }}">
