--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -104,12 +104,14 @@
 
 .code-block {
   @extend %elevation-2;
+  margin: 1.5rem 0;
   border-radius: .25rem;
   overflow: hidden;
   background-color: $dark;
   color: $light;
 
   .highlight {
+    margin: 0;
     border-radius: 0;
     box-shadow: none;
   }
