Add Material Shadow Preview project

--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -222,6 +222,10 @@ $story-text-color: #f8f9fa;
   .card {
     width: 250px;
     margin: 1rem auto;
+
+    .card-image {
+      height: 250px;
+    }
   }
 } 
 
