--- a/assets/css/projects.scss
+++ b/assets/css/projects.scss
@@ -6,9 +6,10 @@
   height: auto;
   margin: 0 auto;
 
-  .card-image-wrapper, .card-image {
+  .card-image {
+    width: 100%;
     height: 250px;
-    overflow: hidden;
+    object-fit: cover;
   }
 }
 
@@ -17,7 +18,7 @@
     width: auto;
     height: 250px;
 
-    .card-image-wrapper {
+    .card-image {
       width: 265px;
     }
   }
