Add scss imports

--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -1,6 +1,8 @@
 // Rouge syntax highlight
 // Theme: Monokai
 
+@import 'material-shadow';
+
 .highlight {
   @extend %elevation-2;
   overflow-x: auto;
