--- a/assets/css/gems.scss
+++ b/assets/css/gems.scss
@@ -2,6 +2,15 @@
 ---
 
 @import 'style';
+@import 'box-options';
+
+$box-height: 250px;
+$container-radius: .25rem;
+
+// Override default box height
+.box {
+  height: $box-height;
+}
 
 .paper-plane-container {
   $plane-color: #efefef;
@@ -18,18 +27,11 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 250px;
+  height: $box-height;
   background-color: lightblue;
+  border-radius: $container-radius;
   overflow: hidden;
   perspective: 1000px;
-
-  &:hover, &:active, &:focus {
-    background-color: lightblue;
-
-    .wind::before, .paper-plane {
-      animation-play-state: running;
-    }
-  }
 
   div {
     transform-style: preserve-3d;
@@ -109,6 +111,12 @@
     }
   }
 
+  &:hover, &:focus {
+    .wind::before, .paper-plane {
+      animation-play-state: running;
+    }
+  }
+
   @keyframes fly {
     from {
       transform: rotateX(-120deg) rotateZ(0);
@@ -129,6 +137,182 @@
     to {
       transform: translateY(200px);
       opacity: 0;
+    }
+  }
+}
+
+.rocket-container {
+  $story-background: #343a40;
+  $rocket-color-primary: #D7CDCC;
+  $rocket-color-secondary: #D1603D;
+  $rocket-color-window: #C6D8D3;
+  $rocket-ease: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  $story-text-color: #f8f9fa;
+
+  position: relative;
+  width: 100%;
+  height: $box-height;
+  background-color: $story-background;
+  border-radius: $container-radius;
+  overflow: hidden;
+
+  .rocket {
+    position: absolute;
+    z-index: 0;
+    bottom: 100px;
+    left: 50%;
+    animation: rocket-fly 2s .3s $rocket-ease forwards infinite alternate;
+    animation-play-state: paused;
+
+    .rocket-body {
+      position: absolute;
+      width: 40px;
+      height: 120px;
+      background-color: $rocket-color-primary;
+      border-radius: 70%;
+      transform: translateX(-50%) translateY(-50%);
+
+      &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 40px;
+        height: 120px;
+        background-color: $rocket-color-secondary;
+        border-radius: 70%;
+        clip-path: ellipse(50% 10% at 50% 10%);
+        -webkit-clip-path: ellipse(50% 10% at 50% 10%);
+      }
+    }
+
+    .rocket-window {
+      position: absolute;
+      width: 26px;
+      height: 26px;
+      background-color: $rocket-color-window;
+      border-radius: 50%;
+      border: 3px solid gray;
+      transform: translateX(-50%) translateY(-50%);
+    }
+
+    .rocket-wing {
+      position: relative;
+      top: 50px;
+
+      &::before, &::after {
+        content: '';
+        position: absolute;
+        z-index: -1;
+        bottom: 5%;
+        border-bottom: 40px solid $rocket-color-secondary;
+      }
+
+      &::before {
+        left: 5px;
+        border-left: 50px solid transparent;
+        border-top-left-radius: 50%;
+        transform: translateX(-100%) rotate(-40deg);
+      }
+
+      &::after {
+        right: 5px;
+        border-right: 50px solid transparent;
+        border-top-right-radius: 50%;
+        transform: translateX(100%) rotate(40deg);
+      }
+    }
+
+    .rocket-tail {
+      position: absolute;
+      width: 16px;
+      top: 58px;
+      border-bottom: 5px solid $rocket-color-secondary;
+      border-left: 2px solid transparent;
+      border-right: 2px solid transparent;
+      transform: translateX(-50%);
+    }
+  }
+
+  .moon {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    width: 810px;
+    height: 810px;
+    border-radius: 50%;
+    background-color: $rocket-color-primary;
+    transform: translateX(-50%) translateY(-50px);
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 25px;
+      left: calc(50% - 100px);
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background-color: darken($rocket-color-primary, 5);
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 15px;
+      left: calc(50% + 20px);
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background-color: darken($rocket-color-primary, 5);
+    }
+  }
+
+  .nightsky {
+    position: relative;
+    width: 100%;
+    height: 100%;
+
+    .star {
+      position: absolute;
+      width: 3px;
+      height: 3px;
+      border-radius: 50%;
+      background-color: white;
+      box-shadow: 0 0 3px 1px white;
+      opacity: 0;
+
+      @for $i from 1 through 5 {
+        &:nth-child(#{$i}) {
+          top: percentage(random(100) / 100);
+          left: percentage(random(100) / 100);
+          animation: starlight (random(3) + 5 + s) (random(2) + s) infinite alternate;
+          animation-play-state: paused;
+        }
+      }
+    }
+  }
+
+  &:hover, &:focus {
+    .rocket, .nightsky .star {
+      animation-play-state: running;
+    }
+  }
+
+  @keyframes rocket-fly {
+    0%, 30% {
+      transform: translateY(0);
+    }
+    100% {
+      transform: translateY(-600px);
+    }
+  }
+
+  @keyframes starlight {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: .8;
     }
   }
 }
