--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,22 +1,22 @@
-<footer class="page-footer bg-dark">
+<footer class="page-footer">
   <div class="container py-1">
     <div class="social-list">
       {%- if site.github_username -%}
         <a class="social-icon" aria-label="My Github page" href="https://github.com/{{ site.github_username }}">
-          <i class="fab fa-github fa-2x color-light" ></i>
+          <i class="fab fa-github fa-2x"></i>
         </a>
       {%- endif -%}
       {%- if site.reddit_username -%}
         <a class="social-icon" aria-label="My Reddit page" href="https://reddit.com/u/{{ site.reddit_username }}">
-          <i class="fab fa-reddit fa-2x color-light"></i>
+          <i class="fab fa-reddit fa-2x"></i>
         </a>
       {%- endif -%}
       {%- if site.twitter_username -%}
         <a class="social-icon" aria-label="My Twitter page" href="https://twitter.com/{{ site.twitter_username }}">
-          <i class="fab fa-twitter fa-2x color-light"></i>
+          <i class="fab fa-twitter fa-2x"></i>
         </a>
       {%- endif -%}
     </div>
-    <p class="text-center color-light m-3">© Bjorn Lu 2019</p>
+    <p class="text-center m-3">© Bjorn Lu 2019</p>
   </div>
 </footer>
