--- a/_sass/_material-shadow.scss
+++ b/_sass/_material-shadow.scss
@@ -1,8 +1,6 @@
-/*!
-* Vuetify v1.5.14
-* Forged by John Leider
-* Released under the MIT License.
-*/
+// Vuetify v1.5.14
+// Forged by John Leider
+// Released under the MIT License.
 %elevation-0 {
   box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.2), 0px 0px 0px 0px rgba(0,0,0,0.14), 0px 0px 0px 0px rgba(0,0,0,0.12);
 }
