--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,8 +1,78 @@
 // Global variables
 
-$light: #f8f9fa;
-$dark: #343a40;
-$gray: #bdbfc2;
-$accent: #2e91f6;
-
 $ease: cubic-bezier(0.39, 0.575, 0.565, 1);
+
+$light: #fefefe;
+$dark: #181818;
+
+$gray-main: #5d6166;
+$gray-100: scale-color($gray-main, $lightness: 90%);
+$gray-200: scale-color($gray-main, $lightness: 80%);
+$gray-300: scale-color($gray-main, $lightness: 50%);
+$gray-400: scale-color($gray-main, $lightness: 30%);
+$gray-500: $gray-main;
+$gray-600: scale-color($gray-main, $lightness: -30%);
+$gray-700: scale-color($gray-main, $lightness: -50%);
+$gray-800: scale-color($gray-main, $lightness: -80%);
+$gray-900: scale-color($gray-main, $lightness: -90%);
+
+$primary-main: #2e91f6;
+$primary-100: scale-color($primary-main, $lightness: 80%);
+$primary-200: scale-color($primary-main, $lightness: 60%);
+$primary-300: scale-color($primary-main, $lightness: 40%);
+$primary-400: scale-color($primary-main, $lightness: 20%);
+$primary-500: $primary-main;
+$primary-600: scale-color($primary-main, $lightness: -20%);
+$primary-700: scale-color($primary-main, $lightness: -40%);
+$primary-800: scale-color($primary-main, $lightness: -60%);
+$primary-900: scale-color($primary-main, $lightness: -80%);
+
+:root {
+  --light: #{$light};
+  --dark: #{$dark};
+
+  --gray-100: #{$gray-100};
+  --gray-200: #{$gray-200};
+  --gray-300: #{$gray-300};
+  --gray-400: #{$gray-400};
+  --gray-500: #{$gray-500};
+  --gray-600: #{$gray-600};
+  --gray-700: #{$gray-700};
+  --gray-800: #{$gray-800};
+  --gray-900: #{$gray-900};
+
+  --primary-100: #{$primary-100};
+  --primary-200: #{$primary-200};
+  --primary-300: #{$primary-300};
+  --primary-400: #{$primary-400};
+  --primary-500: #{$primary-500};
+  --primary-600: #{$primary-600};
+  --primary-700: #{$primary-700};
+  --primary-800: #{$primary-800};
+  --primary-900: #{$primary-900};
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --light: #{$dark};
+    --dark: #{$light};
+
+    --gray-100: #{$gray-900};
+    --gray-200: #{$gray-800};
+    --gray-300: #{$gray-700};
+    --gray-400: #{$gray-600};
+    --gray-600: #{$gray-400};
+    --gray-700: #{$gray-300};
+    --gray-800: #{$gray-200};
+    --gray-900: #{$gray-100};
+
+    --primary-100: #{$primary-900};
+    --primary-200: #{$primary-800};
+    --primary-300: #{$primary-700};
+    --primary-400: #{$primary-600};
+    --primary-600: #{$primary-400};
+    --primary-700: #{$primary-300};
+    --primary-800: #{$primary-200};
+    --primary-900: #{$primary-100};
+  }
+}
