--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -13,9 +13,9 @@ $name: (
 	"u": 234.8412322998047
 );
 
-$hex-color: #181818;
-$glow-color: #7dbbfa;
-$name-color: #efefef;
+$hex-color: $dark;
+$glow-color: $primary-300;
+$name-color: $gray-100;
 
 $start-delay: 2;
 $hex-down-duration: .3;
@@ -100,18 +100,28 @@ $all-up-duration: 1.5;
 }
 
 #projects {
-  margin-top: 5rem;
- 
+	width: 100vw;
+  margin: 5rem calc(50% - 50vw) 0;
+	background-color: $gray-800;
+	color: $gray-100;
+
   .card {
     width: 250px;
     margin: 1rem auto;
+		background-color: var(--gray-100);
+		color: var(--gray-900);
 
     .card-image {
       width: 100%;
       height: 250px;
       object-fit: cover;
     }
-  }
+	}
+	
+	.btn {
+		background-color: var(--gray-100);
+		border: 1px solid var(--gray-100);
+	}
 } 
 
 @media screen and (min-width: 992px) {
@@ -127,4 +137,16 @@ $all-up-duration: 1.5;
       }
     }
   }
+}
+
+@media (prefers-color-scheme: dark) {
+  #projects {
+		.card {
+			background-color: $gray-700;
+		}
+
+		.btn {
+			background-color: $gray-700;
+		}
+	}
 }
