--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,19 +1,19 @@
 <footer class="page-footer">
   <div class="container py-1">
     <div class="social-list">
-      {%- if site.github_username -%}
-        <a class="social-icon" aria-label="My Github page" href="https://github.com/{{ site.github_username }}">
-          <i class="fab fa-github fa-2x"></i>
+      {%- if site.github_username and site.github_username != empty -%}
+        <a class="social-icon" aria-label="Visit my Github page" href="https://github.com/{{ site.github_username }}">
+          <i class="fab fa-github fa-2x" aria-hidden="true"></i>
         </a>
       {%- endif -%}
-      {%- if site.reddit_username -%}
-        <a class="social-icon" aria-label="My Reddit page" href="https://reddit.com/u/{{ site.reddit_username }}">
-          <i class="fab fa-reddit fa-2x"></i>
+      {%- if site.reddit_username and site.reddit_username != empty -%}
+        <a class="social-icon" aria-label="Visit my Reddit page" href="https://reddit.com/u/{{ site.reddit_username }}">
+          <i class="fab fa-reddit fa-2x" aria-hidden="true"></i>
         </a>
       {%- endif -%}
-      {%- if site.twitter_username -%}
-        <a class="social-icon" aria-label="My Twitter page" href="https://twitter.com/{{ site.twitter_username }}">
-          <i class="fab fa-twitter fa-2x"></i>
+      {%- if site.twitter_username and site.twitter_username != empty -%}
+        <a class="social-icon" aria-label="Visit my Twitter page" href="https://twitter.com/{{ site.twitter_username }}">
+          <i class="fab fa-twitter fa-2x" aria-hidden="true"></i>
         </a>
       {%- endif -%}
     </div>
