--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito&display=swap">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.min.css">
-  {%- if page.css -%}
+  {%- if page.css and page.css != empty -%}
     <link rel="stylesheet" href="{{ '/assets/css/' | append: page.css | append: '.css' | relative_url }}">
   {%- else -%}
     <link rel="stylesheet" href="{% link assets/css/main.scss %}">
