Setup header and hero components

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -3,3 +3,8 @@
 @tailwind components;
 
 @tailwind utilities;
+
+html {
+  color: theme('colors.primary.100');
+  background-color: theme('colors.dark.500');
+}
