--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -5,6 +5,43 @@
 @tailwind utilities;
 
 html {
-  color: theme('colors.primary.100');
-  background-color: theme('colors.dark.500');
+  @apply text-lg text-primary-100 bg-dark-500;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  @apply font-bold text-primary-300;
+}
+
+h1 {
+  @apply text-3xl mt-8;
+}
+
+h2 {
+  @apply text-2xl mt-6;
+}
+
+h3, h4, h5, h6 {
+  @apply text-xl mt-4;
+}
+
+p {
+  @apply mb-3;
+}
+
+@screen lg {
+  html {
+    @apply text-xl;
+  }
+
+  h1 {
+    @apply text-4xl mt-10;
+  }
+
+  h2 {
+    @apply text-3xl mt-8;
+  }
+
+  h3, h4, h5, h6 {
+    @apply text-2xl mt-6;
+  }
 }
